--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@notionhq/client": "^3.1.3",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.513.0",
+    "marked": "^15.0.12",
     "next": "15.3.3",
     "notion-to-md": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
